###############################################################################
# Main source code directory.
###############################################################################

# parser library
add_subdirectory(parser)
add_subdirectory(parser_support)

# utils library
add_subdirectory(utils)

# expressions library
add_subdirectory(expressions)

# abstract tree library
add_subdirectory(abstract_tree)

# build the main program
add_subdirectory(main)
